<resources>
    <string name="app_name">UnderConstruction</string>
    <string name="user_id">1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_home">UnderConstruction</string>
    <string name="title_activity_add_report">AddReport</string>
    <string name="title_activity_tabbed_home">TabbedHome</string>
    <string name="title_activity_report_problem">ReportProblem</string>

    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Registration">Don\'t have an account? SignUp! It\'s free!</string>
    <string name="Forget">Forgot Password?</string>
    <string name="Remember">Remember Me</string>

    <string name="title_activity_registration" translatable="false">RegistrationActivity</string>
    <string name="registration_heading">Enter Registration Info</string>
    <string name="email">Your Email Address</string>
    <string name="confirm_password">Comfirm Password</string>
    <string name="signup">Sign me Up!</string>
    <string name="registration_warning">A verification code will be sent to your email</string>
    <string name="title_activity_verification" translatable="false">VerificationActivity</string>
    <string name="verification_title">A verification code has been sent to your email. Enter it below.</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="ForgetTitle">Enter your email address:</string>
    <string name="ForgetEmail">Your Email Address</string>
    <string name="ForgetReset">Reset Password</string>
    <string name="ForgetInstruction">A new password will be sent to your email address.</string>
    <string name="VerificationDidntGetit">I did not receive any verification code . <u>Resend my code</u> .</string>
    <string name="title_activity_post_suggestion">Post Suggestion</string>
    <string name="title_activity_report_auto_upload">Report Auto Upload</string>
    <string name="post_suggestion_title">Is your problem already reported?</string>
    <string name="post_suggestion_subtitle">If so, then please press CANCEL</string>
    <string name="post_suggestion_button">No, just upload my post</string>
    <string name="cancel_button">Cancel</string>
    <string name="own_posts">Your posts</string>
    <string name="own_post">Your Posts</string>
    <string name="activityDashUpBtn">Upload</string>
    <string name="activity_dash_dl_btn">Delete</string>
    <string name="home_btn">Home</string>
    <string name="help_btn">Help</string>
    <string name="profile_btn">Profile</string>
    <string name="report_problem_btn">Report a Problem</string>
    <string name="no_image_box">No Image Mode</string>
    <string name="category_select">Please select a category</string>
    <string name="address">Address (Optional)</string>
    <string name="problem_desc">Problem Description (Optional)</string>
    <string name="upload_now_btn">Upload now</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="hello">Hello </string>
    <string name="rating_string">Your current rating is</string>
    <string name="rating_progress">Rating progress in last few days:</string>
    <string name="report_problem">Report A Problem</string>
    <string name="rating">Rating</string>
    <string name="time">Time</string>
    <string name="cur_problems">Current Problems</string>
    <string name="posted_by">Posted by</string>
    <string name="previous_post_title">You posted this previously</string>

</resources>
