<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="PostSuggestion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_post_title"
        android:id="@+id/textView23"
        android:textSize="20dp"
        android:textColor="@android:color/background_dark"
        android:textIsSelectable="false"
        android:visibility="visible" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imgPostSuggestion"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/sunset" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="23 June, 2016 (Open Manhole) at Mirpur"
        android:id="@+id/lblPostSuggestionDetails"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/post_suggestion_title"
        android:id="@+id/textView8"
        android:textSize="17dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/post_suggestion_subtitle"
        android:id="@+id/textView9"
        android:textSize="15dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvwPostSuggestion"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUploadSuggestionAnyway"
        android:text="@string/post_suggestion_button"
        android:background="#ff0099cc" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/btnSkipUpload" />
</LinearLayout>
