<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="onix.inc.underconstructionloginreg.RegistrationActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registration_heading"
            android:id="@+id/textView"
            android:textColor="@color/material_deep_teal_200"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/registration_warning"
            android:id="@+id/textView2"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtRegistrationUsername"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_name"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtRegistrationPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtRegistrationConfirmPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/confirm_password"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtRegistrationEmail"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:singleLine="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/layoutRegistrationWait"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Please wait..."
                android:id="@+id/textView6"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pbRegistration"
                android:visibility="visible"
                android:max="100"
                android:progress="80"
                android:indeterminate="true"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/btnRegistrationSignup"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/lblRegistrationError"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>
</LinearLayout>
