<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="1">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:id="@+id/imageView"
            android:scaleType="fitCenter"
            android:src="@drawable/brac_logo" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="15dp"
        android:id="@+id/layoutUserPass"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLoginEmail"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:gravity="center_horizontal"
            android:singleLine="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtLoginPassword"
            android:hint="@string/password"
            android:gravity="center_horizontal"
            android:singleLine="true"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:id="@+id/layoutLoginWait"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|fill_horizontal">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:id="@+id/btnLoginLogin"
            android:visibility="gone" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutGmail"
            android:visibility="visible"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Continue with Gmail"
                android:id="@+id/btnGmail"
                android:drawableLeft="@drawable/gplus_re"
                android:background="#dd4b39"
                android:textColor="@android:color/white"
                android:clickable="false"
                android:paddingLeft="10dp"
                android:paddingRight="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Or"
                android:id="@+id/textView21"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:paddingTop="10dp" />

        </LinearLayout>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:id="@+id/btnSeeLogin"
            android:visibility="visible"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/lblLoginError"
            android:gravity="center_horizontal"
            android:textColor="#97005E"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Remember"
            android:id="@+id/chkLoginRemember"
            android:checked="true"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/Forget"
            android:id="@+id/lblLoginForgot"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="0dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registration"
            android:id="@+id/btnLoginRegistration"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</LinearLayout>
